<resources>
    <string name="app_name">LiveControl</string>
    <string name="restart_button">Restart all player</string>
    <string name="restart_kit_button">Restart player</string>
    <string name="kit1">1</string>
    <string name="kit2">2</string>
    <string name="kit3">3</string>
    <string name="kit4">4</string>
    <string name="kit5">5</string>
    <string name="kit6">6</string>
    <string name="kit7">7</string>
    <string name="kit8">8</string>
    <string name="kit9">9</string>
    <string name="kit10">10</string>
    <string name="wifirouter">R</string>
    <string name="encoder">E</string>
    <string name="OK_button">OK</string>
    <string name="state_content">state</string>
    <string name="strength_content">strength</string>
    <string name="kit_content">kit</string>
    <string name="mode_kit_button">mode</string>
    <string name="mode_button">mode all kits</string>

</resources>